security.tf
# Security Group for EC2/K3s
resource "aws_security_group" "ec2_main-server" {
  name        = "smpc-${var.environment}-ec2-main-sg"
  description = "Security group for EC2 (Main Server)"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTPS"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "All traffic from VPC"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.vpc_cidr]
  }

#   ingress {
#     description = "SSH"
#     from_port   = 22
#     to_port     = 22
#     protocol    = "tcp"
#     cidr_blocks = [var.vpc_cidr]
#   }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "smpc-${var.environment}-ec2-main-sg"
    Environment = var.environment
  }
}

resource "aws_key_pair" "my_ec2_key" {
  key_name   = "my-ec2-key"
  public_key = file("C:/Users/YourUsername/.ssh/my-key-pair.pub")
}
